fix pre word wrap

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5529,6 +5529,12 @@ select {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.whitespace-pre {
+  white-space: pre;
+}
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
 .break-words {
   overflow-wrap: break-word;
 }
